# users_and_users_groups

./: .flake8  .gitignore  Dockerfile-BackEnd  Dockerfile-FrontEnd  docker-compose.yml  nginx.conf
backend/: pyproject.toml
backend/src/config/: settings.py  urls.py
backend/src/core/: abstract_classes.py  base_api.py  containers.py  exceptions.py
backend/src/groups/: dto.py  interactors.py  interfaces.py  models.py  repository.py  serializers.py  urls.py  views.py
backend/src/groups/migrations/: 0001_initial.py
backend/src/users/: dto.py  interactor.py  interfaces.py  models.py  repositories.py  serializers.py  urls.py  views.py
backend/src/users/migrations/: 0001_initial.py  0002_alter_users_group.py  0003_alter_users_group.py
commands/: start_server.sh
frontend/: groups.html  groups_script.js  index.html  script.js  style.css  users.html  users_script.js
